Use set/getLocales method N or later